chore: unify DB to data/civitai_dataset.db; remove src/data DB; update config and env defaults

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 CIVITAI_API_KEY=your_civitai_api_key_here
 
 # データベース設定（オプション）
-# デフォルト: src/data/civitai_dataset.db
+# デフォルト: data/civitai_dataset.db
 # DB_PATH=custom/path/to/database.db
 
 # 収集設定（オプション）
