--- a/.gitignore
+++ b/.gitignore
@@ -1,171 +1,30 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
 *.pyc
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
+# Virtual env
+.venv/
+# Database
+data/*.db
+data/backups/
+# Logs
 *.log
-local_settings.py
-db.sqlite3
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# プロジェクト固有の除外設定
-# データベースファイル
-*.db
-*.sqlite
-*.sqlite3
-
-# データ・出力フォルダ
-data/visualizations/*.png
-data/visualizations/*.jpg
-data/visualizations/*.csv
-data/exports/
-
-# ログファイル
-logs/
-*.log
-
-# 一時ファイル
-temp/
-tmp/
-*.tmp
-
-# IDEファイル
-.vscode/settings.json
-.idea/
-*.swp
-*.swo
-
-# OS固有
+streamlit_*.log
+# OS
 .DS_Store
-Thumbs.db
-desktop.ini
+# IDE
+.vscode/
 
-# Streamlit関連
-.streamlit/secrets.toml
+# Local data exports
+data/visualizations/*.csv
+
+processes.txt
+
+# ignore: scripts/*.log
+scripts/*.log
+
+# ignore: collect_status.json
+collect_status.json
+
+# ignore: last_resume.json
+last_resume.json
